--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SyncTimer for SNU&Ventures DreamDay"
     />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Timer</title>
   </head>
   <body>
     <div id="root"></div>
