Change: SNAAC으로 변경

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="SyncTimer for SNU&Ventures DreamDay"
+      content="SNAAC SyncTimer"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--
+      <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Timer</title>
+    <title>SNAAC Timer</title>
   </head>
   <body>
     <div id="root"></div>
